--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ dj-database-url==0.5.0
 Django==4.0.5
 django-crispy-forms==1.14.0
 django-filter==22.1
+django-heroku==0.3.1
 django-on-heroku==1.1.2
 django-widget-tweaks==1.4.12
 djangorestframework==3.13.1
