--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ django-heroku==0.3.1
 django-on-heroku==1.1.2
 django-widget-tweaks==1.4.12
 djangorestframework==3.13.1
+gunicorn==20.1.0
 importlib-metadata==4.12.0
 Markdown==3.3.7
 psycopg2==2.9.3
